@startuml EER

entity "Address"    as address {
  id: bigint,
  street: varchar,
  city: varchar,
  zip: varchar,
  user_id: bigint
}
entity "User"       as user {
    id : bigint
    name: varchar
    email: varchar
    password: varchar
}
entity "Profile"    as profile {
    id : bigint
    bio: TEXT
    phone_number: varchar
    date_of_birth: date
    loyalty_points: number
}
entity "Tag"        as tag {
    id : int
    name: varchar
}
entity "Product"    as product {}
entity "Category"   as category {}

' N..1
address }o--|| user     

' N..N
tag }o..o{ user         

' 1..1
user ||--|| profile     

' N..N
user }o--o{ product     

' N..1
product }|--|| category 

@enduml